// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/Col Should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

<div
  className="c0"
  direction="column"
>
  <div
    flex="1"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    Hey
  </div>
  <div>
    Oh
  </div>
  <div
    flex="2"
    style={
      Object {
        "flex": 2,
      }
    }
  >
    Lets go!
  </div>
</div>
`;

exports[`ui/Col Should render 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
}

<div
  className="c0"
  direction="column"
>
  <div
    flex="1"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    Hey
  </div>
  <div>
    Oh
  </div>
  <div
    flex="2"
    style={
      Object {
        "flex": 2,
      }
    }
  >
    Lets go!
  </div>
</div>
`;

exports[`ui/Col Should render 3`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  height: 100%;
}

<div
  className="c0"
  direction="column"
>
  <div
    flex="1"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    Hey
  </div>
  <div>
    Oh
  </div>
  <div
    flex="2"
    style={
      Object {
        "flex": 2,
      }
    }
  >
    Lets go!
  </div>
</div>
`;
